syntax = "proto3";

package resonator.proto.db;

// Warpper with both the common and the details, used to store in the database as one document blob.
// Contents represent the entirety of the data of one entity (except ID and foreign keys).
message DotableData {
  DotableCommon common = 1;
  DotableDetails details = 2;
}

// Wrapper for data common to all kinds
message DotableCommon {
  string title = 1;
  string description = 2;
  int64 published_epoch_sec = 5;
  int64 updated_epoch_sec = 6;
}

// Wrapper for data specific to a kind
message DotableDetails {
  oneof details {
    Podcast podcast = 1;
    PodcastEpisode podcast_episode = 2;
    Review review = 3;
  }

  message Podcast {
    string imageUrl = 1;
    string author = 2;
    string website_url = 3;
    string language_code = 4;
    string language_display= 5;
    ExternalUrls external_urls = 6;
    string email = 7;
  }

  message PodcastEpisode {
    string rss_guid = 1;
    int32 duration_sec = 2;
    int32 episode_number = 3;
    bool explicit = 4;
    Audio audio = 5;
    ExternalUrls external_urls = 6;

    message Audio {
      // url of the audio file
      string url = 1;
      // file MIME type, like "audio/mpeg"
      string type = 2;
      // length of the file in bytes
      int64 size_bytes = 3;
    }
  }

  message Review {
    // Review body is common.desription so that it is fetched on shallow gets from the server
  }
}

// URLs to access the same content on third party sites.
message ExternalUrls {
  string itunes = 1;
  string spotify = 2;
  string google_play = 3;
}

// Currently this message is stored in an ElasticSearch index
message SearchIndexedData {
  // required
  IndexedDotable dotable = 1;
  // will always be set on episodes
  IndexedDotable parent = 2;
  // required
  IndexedFields indexed_fields = 3;

  message IndexedDotable {
    string id = 1;
    string slug = 2;
    string kind = 3;
    DotableData data = 4;
  }


  message IndexedFields {
    string title = 1;
    // contains all the potentially relevant text:
    //   title, description (possibly truncated), tag values
    string combined_text = 2;
    string parent_title = 3;
    // stringified as "{tag_kind}:{tag_key}"
    repeated string tag_ids = 4;
    repeated string tag_display_values = 5;
  }
}
